# doclient

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
doclient/: app.py  base.py  config.py  utils.py
doclient/views/: home.py  images.py
