[tool.poetry]
name = "doclient"
version = "0.1.0"
description = "Docker Hub Client for Geeks"
authors = ["wjiuhe <wjiuhe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
requests = "^2.27.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
